[package]
name = "liscaf"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Terminal UI scaffolder using ratatui — downloads a GitHub repo and scaffolds a new project name with case conversions."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["tui", "scaffolder", "ratatui", "github", "template"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Interactive prompts
inquire = "0.9.3"

tempfile = "3"
walkdir = "2"
convert_case = "0.11.0"

anyhow = "*"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = true }
ureq = "3.2.0"
similar = "2"

[features]
default = ["tui"]
tui = []

[profile.release]
opt-level = 3
